Patch contribution from Mark DeSpain. Use Boolean.valueOf for minor optimization.