@@ -1,23 +1,20 @@
 /*
- * LogicalOperator.java
- *
- * Created on May 26, 2007, 1:47 PM
+ * JStock - Free Stock Market Software
+ * Copyright (C) 2012 Yan Cheng CHEOK <yccheok@yahoo.com>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or (at
- * your option) any later version.
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
  *
- * This program is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * General Public License for more details.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
- *
- * Copyright (C) 2009 Yan Cheng Cheok <yccheok@yahoo.com>
+ * You should have received a copy of the GNU General Public License along
+ * with this program; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
 package org.yccheok.jstock.analysis;
@@ -46,6 +43,7 @@ public class EqualityOperator extends AbstractOperator {
         this.equality = Equality.Equal;
     }
     
+    @Override
     protected Object calculate()
     {
         Object object0 = inputs[0].getValue();
@@ -60,19 +58,19 @@ public class EqualityOperator extends AbstractOperator {
             switch(equality) 
             {
                 case Equal:
-                    return new Boolean(result == 0);
+                    return Boolean.valueOf(result == 0);
                     
                 case Greater:
-                    return new Boolean(result > 0);
+                    return Boolean.valueOf(result > 0);
                     
                 case Lesser:
-                    return new Boolean(result < 0);
+                    return Boolean.valueOf(result < 0);
                     
                 case GreaterOrEqual:
-                    return new Boolean(result >= 0);
+                    return Boolean.valueOf(result >= 0);
                     
                 case LesserOrEqual:
-                    return new Boolean(result <= 0);
+                    return Boolean.valueOf(result <= 0);
                     
                 default:
                     assert(false);
@@ -86,6 +84,7 @@ public class EqualityOperator extends AbstractOperator {
         return null; 
     }
         
+    @Override
     public int getNumOfInputConnector() {
         return 2;
     }    
