@@ -1,23 +1,20 @@
 /*
- * LogicalOperator.java
- *
- * Created on May 26, 2007, 2:20 PM
+ * JStock - Free Stock Market Software
+ * Copyright (C) 2012 Yan Cheng CHEOK <yccheok@yahoo.com>
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation; either version 2 of the License, or (at
- * your option) any later version.
+ * the Free Software Foundation; either version 2 of the License, or
+ * (at your option) any later version.
  *
- * This program is distributed in the hope that it will be useful, but
- * WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
- * General Public License for more details.
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ * GNU General Public License for more details.
  *
- * You should have received a copy of the GNU General Public License
- * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
- *
- * Copyright (C) 2009 Yan Cheng Cheok <yccheok@yahoo.com>
+ * You should have received a copy of the GNU General Public License along
+ * with this program; if not, write to the Free Software Foundation, Inc.,
+ * 51 Franklin Street, Fifth Floor, Boston, MA 02110-1301 USA.
  */
 
 package org.yccheok.jstock.analysis;
@@ -42,6 +39,7 @@ public class LogicalOperator extends AbstractOperator {
         this.logical = Logical.And;
     }
     
+    @Override
     protected Object calculate()
     {
         Object object0 = inputs[0].getValue();
@@ -59,10 +57,10 @@ public class LogicalOperator extends AbstractOperator {
         switch(logical) 
         {
             case And:
-                return new Boolean(b0 && b1);
+                return Boolean.valueOf(b0 && b1);
 
             case Or:
-                return new Boolean(b0 || b1);
+                return Boolean.valueOf(b0 || b1);
                 
             default:
                 assert(false);
@@ -71,6 +69,7 @@ public class LogicalOperator extends AbstractOperator {
         return null; 
     }
         
+    @Override
     public int getNumOfInputConnector() {
         return 2;
     }    
